<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">icloudSDK</string>
    <string name="cancel">取消</string>
    <string name="change_psd">重置密码</string>
    <string name="change_success">修改成功</string>
    <string name="channel_alipay">支付宝</string>
    <string name="channel_tencentmm">微信支付</string>
    <string name="confirm">确认</string>
    <string name="entered_psd_differ">两次输入的密码不一致</string>
    <string name="forget_psd">忘记密码?</string>
    <string name="game_login">游戏登录</string>
    <string name="guest_login">游客登录</string>
    <string name="html">" "<strong>同意</strong> <a href="https://sdk.988wan.com/agreement"><p>《用户协议》</p></a>" "</string>
    <string name="loading">加载中...</string>
    <string name="login">立即登录</string>
    <string name="login_success">登录成功</string>
    <string name="other_login">账号密码登录</string>
    <string name="perfect_account">完善账号</string>
    <string name="perfect_success">完善成功</string>
    <string name="plese_account">请输入手机号（免注册）</string>
    <string name="plese_account_register">请输入账号</string>
    <string name="plese_code">请输入收到的验证码</string>
    <string name="plese_confirm">请输入确认密码</string>
    <string name="plese_confirm_new">请输入确认新密码</string>
    <string name="plese_forget_psd">请输入需要找回密码的登录账号</string>
    <string name="plese_new_psd">请输入新密码</string>
    <string name="plese_old_psd">请输入旧密码</string>
    <string name="plese_phone">请输入绑定手机号</string>
    <string name="plese_phone_chose">请输入绑定手机号码(选填)</string>
    <string name="plese_phone_confirm">短信验证码</string>
    <string name="plese_psd">请输入密码</string>
    <string name="plese_psd_register">请输入密码(6-8位英文字母或数字)</string>
    <string name="plese_right_confirm">请输入右边的验证码</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="remember_psd">记住密码</string>
    <string name="reset_phone">重置手机</string>
    <string name="reset_success">重置成功</string>
    <string name="returnStr">&lt; 返回</string>
    <string name="success">成功</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="user_register">用户注册</string>
</resources>
