<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/login_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/forget_psd" style="@style/pop_title" />
    <EditText android:id="@id/et_phone" android:hint="@string/plese_phone" android:inputType="phone" style="@style/edittext_style" />
    <EditText android:id="@id/et_forget_psd" android:hint="@string/plese_new_psd" android:inputType="textPassword" style="@style/edittext_style" />
    <EditText android:id="@id/et_forget_psd_confirm" android:hint="@string/plese_confirm_new" android:inputType="textPassword" style="@style/edittext_style" />
    <RelativeLayout android:layout_gravity="center" android:layout_width="260.0dip" android:layout_height="38.0dip" android:layout_marginTop="8.0dip">
        <EditText android:textSize="16.0sp" android:gravity="center|left" android:id="@id/et_phone_code" android:background="@drawable/gray" android:padding="5.0dip" android:layout_width="260.0dip" android:layout_height="38.0dip" android:hint="@string/plese_phone_confirm" />
        <Button android:textColor="#ffffffff" android:gravity="center" android:id="@id/btn_phone_code" android:background="@drawable/blue" android:layout_width="66.0dip" android:layout_height="28.0dip" android:layout_marginRight="5.0dip" android:text="获取" android:layout_alignRight="@id/et_phone_code" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="320.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
        <Button android:id="@id/btn_forget_cancel" android:background="@drawable/gray_dark" android:layout_width="130.0dip" android:layout_marginRight="15.0dip" android:text="@string/cancel" style="@style/pop_button" />
        <Button android:id="@id/btn_forget_confirm" android:layout_width="130.0dip" android:layout_marginLeft="15.0dip" android:text="@string/confirm" style="@style/pop_button" />
    </LinearLayout>
</LinearLayout>